TODO/peertube/puczat-peertube-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  peertube
  labels:
    app: peertube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peertube
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: peertube
    spec:
      containers:
      - name: peertube
        image: "chocobozzz/peertube:production-stretch"
        imagePullPolicy: Always
        ports:
          - name: svc2pod
            containerPort: 9000
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: svc2pod
        readinessProbe:
          httpGet:
            path: /
            port: svc2pod
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
       - name: data
         hostPath:
          path: /data/peertube
       - name: config
         hostPath:
          path: /data/peertube-config
